--- a/packages/ednet_cms/pubspec.yaml
+++ b/packages/ednet_cms/pubspec.yaml
@@ -1,15 +1,18 @@
 name: ednet_cms
 description: Semantic CMS tools
-version: 0.0.3-dev.5
+version: 0.0.3-dev.6
 homepage: https://github.com/ednet-dev/cms/tree/main/packages/ednet_cms
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  ednet_code_generation: 0.0.5
-  ednet_core: 0.0.1+10
-
+  flutter:
+    sdk: flutter
+  ednet_code_generation:
+    path: ../ednet_code_generation
+  ednet_core:
+    path: ../core
   watcher: ^1.0.2
   args: ^2.4.0
   build: ^2.3.1
@@ -17,8 +20,10 @@ dependencies:
   path: ^1.8.2
 
 dev_dependencies:
-  test: 1.22.0
+  test: 1.24.9
   flutter_lints: ^2.0.1
+  flutter_test:
+    sdk: flutter
   build_runner: ^2.3.3
   build_web_compilers: ^3.2.7
 
