--- a/packages/core/pubspec.yaml
+++ b/packages/core/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.1+10
 homepage: https://github.com/ednet-dev/cms/tree/main/packages/core
 
 environment:
-  sdk: ">=3.0.3 <4.0.0 <4.0.0"
+  sdk: "^3.5.0-152"
 
 dependencies:
-  test: ^1.24.9
+  test: ^1.25.5
