--- a/packages/core/pubspec.yaml
+++ b/packages/core/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.1+10
 homepage: https://github.com/ednet-dev/cms/tree/main/packages/core
 
 environment:
-  sdk: "^3.5.0-152"
+  sdk: '>=3.5.0-169.0.dev <4.0.0'
 
 dependencies:
   test: ^1.25.5
