--- a/packages/ednet_cms/pubspec.yaml
+++ b/packages/ednet_cms/pubspec.yaml
@@ -26,6 +26,7 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^2.4.10
   build_web_compilers: ^3.2.7
+  build_config: ^1.1.1
 
 executables:
   build:
@@ -34,9 +35,9 @@ executables:
 builders:
   hello_world:
     import: "package:ednet_cms/src/builders/hello_world_builder.dart"
-    builder_factories: ["helloWorldBuilder"]
-    build_extensions: {".yaml": [".dart"]}
-    auto_apply: root_package
+    builder_factories: [ "helloWorldBuilder" ]
+    build_extensions: { ".yaml": [ ".model.dart" ] }
+    auto_apply: dependents
     build_to: source
-    runs_before: [source_gen|combining_builder]
-    applies_builders: [source_gen|combining_builder]
+    runs_before: [ source_gen|combining_builder ]
+    applies_builders: [ source_gen|combining_builder ]
