--- a/packages/ednet_code_generation/pubspec.yaml
+++ b/packages/ednet_code_generation/pubspec.yaml
@@ -6,10 +6,10 @@ homepage: https://github.com/ednet-dev/cms/tree/main/packages/ednet_code_generat
 documentation: https://github.com/ednet-dev/cms
 
 environment:
-  sdk: ">=3.0.3 <4.0.0 <4.0.0"
+  sdk: '>=3.5.0-169.0.dev <4.0.0'
 
 dependencies:
   ednet_core:
     path: ../core
-  test: ^1.24.9
+  test: ^1.25.5
   yaml: ^3.1.2
