feat: Generate ednet_core domain model.

--- a/apps/one/lib/requirements/hausehold_management/finance.ednet.yaml
+++ b/apps/one/lib/requirements/hausehold_management/finance.ednet.yaml
@@ -1,7 +1,8 @@
-domain: 'finances'
+domain: 'household_management'
+model: 'finances'
 concepts:
-  - name:
-      entry: true
+  - name: Finance
+    entry: true
   - name: Bank
   - name: Account
   - name: Transaction
