fix(ednet_cms): Pub get on lib creation.

--- a/apps/one/lib/requirements/hausehold/hausehold.ednet.yaml
+++ b/apps/one/lib/requirements/hausehold/hausehold.ednet.yaml
@@ -1,5 +1,5 @@
-domain: 'household_management'
-model: 'household'
+domain: 'household'
+model: 'core'
 concepts:
   - name: Household
     entry: true
