--- a/packages/ednet_cms/build.yaml
+++ b/packages/ednet_cms/build.yaml
@@ -1,16 +1,16 @@
 targets:
   $default:
     builders:
-      ednet_cms|content_watcher_builder:
+      ednet_cms|contentWatcherBuilder:
         generate_for:
-          - lib/requirements/**/*.yaml
+          - lib/requirements/**/*.ednet.yaml
 
 builders:
   contentWatcherBuilder:
     import: "package:ednet_cms/src/builders/content_watcher_builder.dart"
     builder_factories: [ "contentWatcherBuilder" ]
-    build_extensions: { ".yaml": [ ".dart" ] }
+    build_extensions: { ".ednet.yaml": [ ".g.dart" ] }
     auto_apply: dependents
-    build_to: source
+    build_to: cache
     runs_before: [ source_gen|combining_builder ]
     applies_builders: [ source_gen|combining_builder ]
