feat(one): Extend One model with name attribute.

--- a/apps/one/lib/requirements/hausehold/member.ednet.yaml
+++ b/apps/one/lib/requirements/hausehold/member.ednet.yaml
@@ -3,3 +3,10 @@ model: 'member'
 concepts:
   - name: Member
     entry: true
+    attributes:
+      - sequence: 1
+        category: attribute
+        name: name
+        type: String
+        essential: true
+        sensitive: false
