--- a/apps/one/lib/requirements/hausehold/project.ednet.yaml
+++ b/apps/one/lib/requirements/hausehold/project.ednet.yaml
@@ -3,6 +3,13 @@ model: 'project'
 concepts:
   - name: Project
     entry: true
+    attributes:
+      - sequence: 1
+        category: attribute
+        name: name
+        type: String
+        essential: true
+        sensitive: false
   - name: Task
   - name: Milestone
   - name: Resource
