Increment domain model.

--- a/apps/one/lib/requirements/global_democracy/electoral_system.ednet.yaml
+++ b/apps/one/lib/requirements/global_democracy/electoral_system.ednet.yaml
@@ -6,9 +6,11 @@ concepts:
     entry: true
     attributes:
       - name: citizenId
-        type: String
-      - name: name
-        type: String
+        category: identifier
+
+      - name: firstName
+      - name: lastName
+
     policies:
       - name: VerifyIdentity
         description: Verify the identity of a citizen.
