--- a/packages/types/pubspec.yaml
+++ b/packages/types/pubspec.yaml
@@ -13,4 +13,8 @@ dependencies:
     path: ../core
   ednet_core_default_app:
     path: ../../../ednet_core_default_app
-  
+
+
+dev_dependencies:
+  build_runner: ^2.4.0
+  build_web_compilers: ^4.0.4
