--- a/apps/one/pubspec.yaml
+++ b/apps/one/pubspec.yaml
@@ -20,7 +20,8 @@ dependencies:
   flame: ^1.18.0
   flutter_svg:
   flame_svg: ^1.10.2
-
+  expressions: ^0.2.5+1
+¢
 dev_dependencies:
   flutter_test:
     sdk: flutter
