--- a/apps/one/pubspec.yaml
+++ b/apps/one/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   app_links: ^6.3.2
   ednet_core:
-    ../../packages/core
+    path: ../../packages/core
   ednet_cms:
     path: ../../packages/cms
   graphview: ^1.2.0
