--- a/packages/types/pubspec.yaml
+++ b/packages/types/pubspec.yaml
@@ -1,7 +1,7 @@
 name: ednet_core_types
 
 homepage: https://ednet.dev/
-version: 0.0.1
+version: 0.0.1+1
 
 description: a generic Flutter component done by meta-programming in EDNetCore.
 
