--- a/packages/cms/pubspec.yaml
+++ b/packages/cms/pubspec.yaml
@@ -9,16 +9,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  ednet_code_generation:
-    path: ../code_generation
-  ednet_core:
-    path: ../core
   watcher: ^1.0.2
   args: ^2.4.0
   build: ^2.3.1
   glob: ^2.1.1
   path: ^1.8.2
   shared_preferences: ^2.2.3
+  ednet_core: ^0.1.0
+  ednet_code_generation: ^0.0.5
 
 dev_dependencies:
   test: ^1.25.5
