--- a/packages/code_generation/pubspec.yaml
+++ b/packages/code_generation/pubspec.yaml
@@ -1,5 +1,5 @@
 name: ednet_code_generation
-version: 0.0.5
+version: 0.0.5+1
 description: Generate a new EDNetCore project.
 
 homepage: https://github.com/ednet-dev/cms/tree/main/packages/ednet_code_generation
@@ -9,6 +9,6 @@ environment:
   sdk: '>=3.5.0-180.3.beta <4.0.0'
 
 dependencies:
-  ednet_core: ^0.1.0
+  ednet_core: ^1.0.1
   test: ^1.25.5
   yaml: ^3.1.2
