--- a/apps/one/lib/staging/project/scheduling/pubspec.yaml
+++ b/apps/one/lib/staging/project/scheduling/pubspec.yaml
@@ -6,7 +6,7 @@ description: project_scheduling application that uses ednet_core for its model.
 homepage: https://ednet.one/
 
 environment:
-  sdk: '>=3.5.0-180.3.beta <4.0.0'
+  sdk: '>=3.7.0 <4.0.0'
   
 dependencies:
   ednet_core: 
