--- a/apps/one/pubspec.yaml
+++ b/apps/one/pubspec.yaml
@@ -4,7 +4,9 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.1
 
 environment:
-  sdk: '>=3.5.0-180.3.beta <4.0.0'
+  sdk: '>=3.7.0 <4.0.0'
+  flutter: ">=3.29.0"
+
 dependencies:
   flutter:
     sdk: flutter
