--- a/packages/cms/pubspec.yaml
+++ b/packages/cms/pubspec.yaml
@@ -4,7 +4,8 @@ version: 1.0.1
 homepage: https://github.com/ednet-dev/cms/tree/main/packages/ednet_cms
 
 environment:
-  sdk: '>=3.5.0-180.3.beta <4.0.0'
+  sdk: '>=3.7.0 <4.0.0'
+  flutter: ">=3.29.0"
 
 dependencies:
   flutter:
