--- a/packages/types/pubspec.yaml
+++ b/packages/types/pubspec.yaml
@@ -6,7 +6,7 @@ version: 1.0.1
 description: a generic Flutter component done by meta-programming in EDNetCore.
 
 environment:
-  sdk: '>=3.5.0-180.3.beta <4.0.0'
+  sdk: '>=3.7.0 <4.0.0'
 
 dependencies:
   ednet_core:
