--- a/tools/apdf/pubspec.yaml
+++ b/tools/apdf/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.7
 publish_to: none
 
 environment:
-  sdk: '>=3.5.0-180.3.beta <4.0.0'
+  sdk: '>=3.7.0 <4.0.0'
 
 dependencies:
   args: ^2.4.2
