--- a/packages/cms/pubspec.yaml
+++ b/packages/cms/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   shared_preferences: ^2.2.3
   ednet_core: ^1.0.0
   ednet_code_generation: ^1.0.0
+  yaml: ^3.1.3
 
 dev_dependencies:
   test: ^1.25.5
