--- a/packages/cms/.gitignore
+++ b/packages/cms/.gitignore
@@ -30,3 +30,20 @@ pubspec_overrides.yaml
 
 .flutter-plugins
 .flutter-plugins-dependencies
+
+# Package-specific build outputs
+lib/generated/
+lib/**/*.g.dart
+lib/**/*.freezed.dart
+lib/**/*.mocks.dart
+
+# Package-specific test files
+test/**/*.vm.json
+test/**/*.g.dart
+test/**/*.freezed.dart
+test/**/*.mocks.dart
+
+# Package-specific coverage
+coverage/
+.test_coverage.dart
+.test_runner.dart
