--- a/packages/types/.gitignore
+++ b/packages/types/.gitignore
@@ -1,3 +1,20 @@
+# Package-specific build outputs
+lib/generated/
+lib/**/*.g.dart
+lib/**/*.freezed.dart
+lib/**/*.mocks.dart
+
+# Package-specific test files
+test/**/*.vm.json
+test/**/*.g.dart
+test/**/*.freezed.dart
+test/**/*.mocks.dart
+
+# Package-specific coverage
+coverage/
+.test_coverage.dart
+.test_runner.dart
+
 .DS_Store
 .pub
 build
