--- a/packages/drift/pubspec.yaml
+++ b/packages/drift/pubspec.yaml
@@ -1,18 +1,22 @@
-name: ednet_drift_repository
-description: "Generic Drift database integration for EDNet Core entities"
-version: 0.0.1
-homepage: https://github.com/ednet-dev/cms/tree/main/packages/drift/ednet_drift
+name: ednet_drift
+description: Drift/SQLite repository implementation for EDNet Core domain models
+version: 1.0.0
+repository: https://github.com/ednet-dev/ednet_core
 
 environment:
-  sdk: ">=3.7.0 <4.0.0"
-  flutter: ">=3.29.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
-  ednet_core: ^1.0.0
-  drift: ^2.26.0
+  ednet_core:
+    path: ../core
+  drift: ^2.5.0
+  sqlite3_flutter_libs: ^0.5.12
+  path: ^1.8.3
+  path_provider: ^2.0.12
+  meta: ^1.8.0
 
 dev_dependencies:
-  drift_dev: ^2.26.0
-  build_runner: ^2.4.10
-  lints: ^4.0.0
-  test: ^1.25.8
+  lints: ^2.0.1
+  test: ^1.22.0
+  build_runner: ^2.3.2
+  drift_dev: ^2.5.2
